k8s/PerflowBackendDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: perflow
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: external-secrets
      containers:
        - name: backend
          image: 851725312801.dkr.ecr.ap-northeast-2.amazonaws.com/perflow/backend:latest
          ports:
            - containerPort: 8080
