k8s/RabbitMqDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: perflow-rabbitmq
  namespace: perflow
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672 # RabbitMQ communication port
            - containerPort: 15672 # RabbitMQ Management UI port
