k8s/RabbitMqService.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: perflow
  labels:
    app: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 5672 # Service port for RabbitMQ communication
      targetPort: 5672
    - protocol: TCP
      port: 15672 # Service port for RabbitMQ Management UI
      targetPort: 15672
  type: ClusterIP
