k8s/PerflowIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: perflow-ingress
  namespace: perflow
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:851725312801:certificate/c832c4d8-e4a7-4852-8272-36cb7aae8d30
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    # 전체 도메인 요청 규칙
    - host: perflow.site
      http:
        paths:
          # /api/ 경로는 Spring Boot 서비스로 라우팅
          - path: /api/v1/
            pathType: Prefix
            backend:
              service:
                name: backend-service # Spring Boot의 Kubernetes 서비스 이름
                port:
                  number: 80 # Spring Boot 서비스 포트
